# SkyProBeta_Course_project

./: main.py  pyproject.toml
data/: operations.xls
src/: log.py  reports.py  services.py  utils.py  views.py
tests/: test_data.xls  test_read_data.xls  test_services.py  test_utils.py  test_views.py
