[tool.poetry]
name = "skyprobeta-course-project"
version = "0.1.0"
description = ""
authors = ["Vladimir Titov <tvv-vg@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
xlrd = "^2.0.1"
requests = "^2.31.0"
yahoofinancials = "^1.17"
forex-python = "^1.8"
yahoo-fin = "^0.8.9.1"
xlwt = "^1.3.0"
pandas-stubs = "^2.1.1.230928"
types-requests = "^2.31.0.10"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.7.1"
flake8 = "^6.1.0"
isort = "^5.12.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.black]
# максимальная длина строки
line-length = 119
# файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # исключить несколько общих каталогов в
    | \.git          # корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # также отдельно исключить файл с именем foo.py в
                     # корне проекта
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
